[package]
name = "di"
version = "0.1.0"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2018"
publish = true
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/di/"
homepage = "https://github.com/sunli829/di"
repository = "https://github.com/sunli829/di"
keywords = ["di", "ioc", "dependency", "inversion", "dependency-injection"]

[dependencies]
di-derive = { version = "0.1.0", path = "di-derive" }
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
